added studyschedule module
